--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/auth": "^14.9.4",
     "@react-native-firebase/database": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
+    "@react-native-firebase/storage": "^14.9.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "eas-cli": "^0.52.0",
@@ -28,6 +29,7 @@
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-picker": "^4.8.3",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-uuid": "^2.0.1",
